on a flexible and high quality code base designed for small 
to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.7 (development) -----

2006-08-15, kato
  Fixed mergeArrays yet again, still not working correctly... Oh PHP!  How
  thy constantly changing ways bring me woe!
   - zentrack_2/includes/zen.class 1.49
  Some users reported problems with $GLOBALS array not working as expected
  Replaced object references with global $obj;
   - zentrack_2/includes/ZenFieldMap.class 1.48
   - zentrack_2/includes/ZenSearch.php 1.4
   - zentrack_2/includes/ZenSessionManager.class 1.12
   - zentrack_2/includes/ZenUser.php 1.2
   - zentrack_2/includes/headerInc.php 1.76
   - zentrack_2/includes/nav.php 1.34
   - zentrack_2/includes/paging.php 1.8
   - zentrack_2/includes/zenTrack.class 1.221
   - zentrack_2/includes/templates/accessForm.php 1.11
   - zentrack_2/includes/templates/contact_buttonBox.php 1.6
   - zentrack_2/includes/templates/contact_personBox.php 1.6
   - zentrack_2/includes/templates/contact_titleBox.php 1.6
   - zentrack_2/includes/templates/listTickets.php 1.42
   - zentrack_2/includes/templates/loginForm 1.22
   - zentrack_2/includes/templates/newAgreementForm.php 1.12
   - zentrack_2/includes/templates/searchForm.php 1.25
   - zentrack_2/includes/templates/ticket_actions.php 1.6
   - zentrack_2/includes/templates/ticket_fields_editable.php 1.4
   - zentrack_2/includes/templates/ticket_load_attachments.php 1.6
   - zentrack_2/includes/templates/ticket_load_contacts.php 1.10
   - zentrack_2/includes/templates/ticket_load_log.php 1.6
   - zentrack_2/includes/templates/ticket_load_notify.php 1.6
   - zentrack_2/includes/templates/ticket_load_tasks.php 1.6
   - zentrack_2/includes/templates/actions/move.php 1.10